[gd_scene load_steps=22 format=2]

[ext_resource path="res://DungeonCrawler/UI/Pop-up/LevelPopup.gd" type="Script" id=1]
[ext_resource path="res://Assets/elements/Firework.png" type="Texture" id=2]
[ext_resource path="res://Assets/elements/step.png" type="Texture" id=3]
[ext_resource path="res://Assets/elements/codeblocks.png" type="Texture" id=4]
[ext_resource path="res://Assets/elements/collision-symbol-emoji-512x512-bs5xqfew.png" type="Texture" id=5]
[ext_resource path="res://Assets/ui/SmallBackground.png" type="Texture" id=6]
[ext_resource path="res://Assets/ui/ExtractedButtons/level_selection_button.png" type="Texture" id=8]
[ext_resource path="res://Assets/ui/RedTitle.png" type="Texture" id=9]
[ext_resource path="res://Assets/ui/ExtractedButtons/play_button.png" type="Texture" id=10]
[ext_resource path="res://Assets/ui/ExtractedButtons/restart_button.png" type="Texture" id=11]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold_8.tres" type="DynamicFont" id=12]
[ext_resource path="res://Assets/ui/pngkey.com-star-clipart-png-716247.png" type="Texture" id=13]
[ext_resource path="res://Assets/Fonts/Montserrat-ExtraBold.ttf" type="DynamicFontData" id=14]
[ext_resource path="res://DungeonCrawler/UI/Pop-up/LevelCompletePop.gd" type="Script" id=15]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 862, 449 )

[sub_resource type="Animation" id=2]
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Fireworks2:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Fireworks1:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20, 21, 22, 23, 24, 25, 26, 27, 28, 29 ]
}

[sub_resource type="AtlasTexture" id=3]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 1, 3, 244, 235 )

[sub_resource type="AtlasTexture" id=4]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 260, 3, 244, 235 )

[sub_resource type="AtlasTexture" id=5]
flags = 4
atlas = ExtResource( 13 )
region = Rect2( 519, 310, 244, 235 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="DynamicFont" id=7]
size = 42
font_data = ExtResource( 14 )

[node name="LevelCompletePopup" type="Control"]
margin_right = 256.0
margin_bottom = 144.0
rect_min_size = Vector2( 256, 144 )
script = ExtResource( 15 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelPopup" type="PopupDialog" parent="."]
visible = true
margin_left = 62.9289
margin_top = 24.7221
margin_right = 318.929
margin_bottom = 168.722
rect_scale = Vector2( 0.5, 0.75 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Fireworks2" type="Sprite" parent="LevelPopup"]
position = Vector2( -16.637, 15.6643 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 6
vframes = 5

[node name="Fireworks1" type="Sprite" parent="LevelPopup"]
position = Vector2( 265.454, 14.3995 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 6
vframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="LevelPopup"]
anims/firework = SubResource( 2 )

[node name="Title" type="TextureRect" parent="LevelPopup"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_right = 34.0
margin_bottom = 28.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 9 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tutorial" type="Label" parent="LevelPopup/Title"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 2.0
margin_top = 2.0
margin_right = -2.0
custom_fonts/font = ExtResource( 12 )
text = "Score"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="LevelPopup"]
margin_left = 63.0712
margin_top = 31.2122
margin_right = 815.071
margin_bottom = 284.212
rect_scale = Vector2( 0.162324, 0.126162 )
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="LevelPopup/VBoxContainer"]
margin_right = 752.0
margin_bottom = 235.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="LevelPopup/VBoxContainer/HBoxContainer"]
margin_right = 244.0
margin_bottom = 235.0
texture = SubResource( 3 )

[node name="TextureRect2" type="TextureRect" parent="LevelPopup/VBoxContainer/HBoxContainer"]
margin_left = 254.0
margin_right = 498.0
margin_bottom = 235.0
texture = SubResource( 4 )

[node name="TextureRect3" type="TextureRect" parent="LevelPopup/VBoxContainer/HBoxContainer"]
margin_left = 508.0
margin_right = 752.0
margin_bottom = 235.0
texture = SubResource( 5 )

[node name="PanelContainer" type="PanelContainer" parent="LevelPopup/VBoxContainer"]
margin_top = 285.0
margin_right = 752.0
margin_bottom = 517.0
custom_styles/panel = SubResource( 6 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelPopup/VBoxContainer/PanelContainer"]
margin_right = 752.0
margin_bottom = 232.0
custom_constants/separation = 10

[node name="Total Steps" type="HBoxContainer" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer"]
margin_right = 752.0
margin_bottom = 70.0

[node name="steps icon" type="TextureRect" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Steps"]
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 3 )

[node name="total steps taken" type="Label" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Steps"]
margin_left = 74.0
margin_top = 9.0
margin_right = 498.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total Steps Taken :"

[node name="step_count" type="Label" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Steps"]
margin_left = 502.0
margin_top = 9.0
margin_right = 502.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Total Collisions" type="HBoxContainer" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 752.0
margin_bottom = 150.0

[node name="collision icon" type="TextureRect" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Collisions"]
margin_right = 70.0
margin_bottom = 70.0
texture = ExtResource( 5 )

[node name="total collision" type="Label" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Collisions"]
margin_left = 74.0
margin_top = 9.0
margin_right = 449.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total Collisions : "

[node name="collision_count" type="Label" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Collisions"]
margin_left = 453.0
margin_top = 9.0
margin_right = 453.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="Total Code Blocks" type="HBoxContainer" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 160.0
margin_right = 752.0
margin_bottom = 232.0

[node name="code blocks icon" type="TextureRect" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Code Blocks"]
margin_right = 70.0
margin_bottom = 72.0
texture = ExtResource( 4 )

[node name="total code blocks" type="Label" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Code Blocks"]
margin_left = 74.0
margin_top = 10.0
margin_right = 632.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Total Code Blocks used : "

[node name="codeblock_count" type="Label" parent="LevelPopup/VBoxContainer/PanelContainer/VBoxContainer/Total Code Blocks"]
margin_left = 636.0
margin_top = 10.0
margin_right = 636.0
margin_bottom = 62.0
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0, 0, 0, 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="LevelPopup"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -63.0
margin_top = -47.7586
margin_right = 51.0
margin_bottom = -17.7586
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelSelectionButton" type="TextureButton" parent="LevelPopup/HBoxContainer"]
margin_right = 30.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="RestartButton" type="TextureButton" parent="LevelPopup/HBoxContainer"]
margin_left = 42.0
margin_right = 72.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="TextureButton" parent="LevelPopup/HBoxContainer"]
margin_left = 84.0
margin_right = 114.0
margin_bottom = 30.0
rect_min_size = Vector2( 30, 30 )
texture_normal = ExtResource( 10 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="LevelPopup/HBoxContainer/LevelSelectionButton" to="." method="_on_LevelSelectionButton_pressed"]
[connection signal="pressed" from="LevelPopup/HBoxContainer/RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="pressed" from="LevelPopup/HBoxContainer/NextButton" to="." method="_on_NextButton_pressed"]
